added comments for all the functions, as well as some other minor improvements

--- a/P1.vcxproj
+++ b/P1.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Block.h" />
     <ClInclude Include="BlocksMap.h" />
+    <ClInclude Include="checkML.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Texture.h" />
