--- a/P1.vcxproj.filters
+++ b/P1.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="Ball.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="checkML.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
