added info bar with time and level

--- a/P1.vcxproj
+++ b/P1.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="BlocksMap.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="InfoBar.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -130,6 +131,7 @@
     <ClInclude Include="BlocksMap.h" />
     <ClInclude Include="checkML.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="InfoBar.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Vector2D.h" />
