--- a/P1.vcxproj.filters
+++ b/P1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="InfoBar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerDataManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Texture.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InfoBar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerDataManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
